# rs-capture-pipeline

./: .gitignore  CHANGELOG.md  CURSOR_CONTEXT.md  Cargo.toml  README.md
crates/app/: Cargo.toml
crates/app/src/: encode_async.rs  main.rs
crates/audio/: Cargo.toml
crates/audio/src/: downmix.rs  lib.rs  presence.rs  wasapi.rs  wav.rs
crates/audio_encoder/: Cargo.toml
crates/audio_encoder/src/: lib.rs  mf_aac.rs  opus.rs
crates/capture/: Cargo.toml
crates/capture-runtime/: Cargo.toml
crates/capture-runtime/examples/: record_to_dir.rs  stream_stats.rs
crates/capture-runtime/src/: config.rs  env.rs  error.rs  events.rs  lib.rs  params.rs  process_metrics.rs  run_win.rs
crates/capture/src/: d3d11.rs  dxgi.rs  lib.rs  monitor.rs  wgc.rs
crates/encoder/: Cargo.toml
crates/encoder/src/: amf.rs  annex_b.rs  i420.rs  lib.rs  mf_h264_hw.rs  nvenc.rs  openh264_enc.rs  qsv.rs  registry.rs  traits.rs
crates/output/: Cargo.toml
crates/output/src/: annexb.rs  lib.rs  mp4_file.rs
crates/pipeline/: Cargo.toml  build.rs
crates/pipeline/src/: color_convert.rs  frame.rs  lib.rs  queue.rs  readback.rs  texture_pool.rs
docs/: GAME_BENCHMARK.md  INTEGRATION.md
docs/blog/: README.md  forza-benchmark-vs-obs.md
scripts/: live_metrics.ps1
shaders/: color_convert.hlsl
