[workspace]
resolver = "2"
members = [
  "crates/capture",
  "crates/audio",
  "crates/pipeline",
  "crates/encoder",
  "crates/audio_encoder",
  "crates/output",
  "crates/capture-runtime",
  "crates/app",
]

[workspace.dependencies]
windows = { version = "0.62", features = [
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_Media_MediaFoundation",
  "Win32_Devices_Properties",
  "Graphics_Capture",
  "Graphics_DirectX",
  "Graphics_DirectX_Direct3D11",
  "Graphics_Display",
  "Win32_System_WinRT_Direct3D11",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Ole",
  "Win32_System_Variant",
  "Win32_System_Threading",
  "Win32_Foundation",
] }
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
audiopus = "0.2"
sysinfo = "0.33"

# Patched `nvenc`: EOS flush with a real bitstream pointer + infallible `Drop` (upstream unwraps on destroy).
[patch.crates-io]
nvenc = { path = "vendor/nvenc" }
