[package]
name = "capture-pipeline-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "capture-pipeline"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
crossbeam-channel.workspace = true
capture = { path = "../capture" }
pipeline = { path = "../pipeline" }
encoder = { path = "../encoder" }
output = { path = "../output" }
audio = { path = "../audio" }
audio_encoder = { path = "../audio_encoder" }
windows.workspace = true
ctrlc = "3"
tracing.workspace = true
tracing-subscriber.workspace = true
