[package]
name = "capture-pipeline-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "capture-pipeline"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
capture-runtime = { path = "../capture-runtime" }
windows.workspace = true
ctrlc = "3"
tracing.workspace = true
tracing-subscriber.workspace = true
