[package]
name = "capture-runtime"
version = "0.1.0"
edition = "2021"
description = "Embeddable screen/audio capture orchestration API for hosts (CLI, MyCord, tray apps)."
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
crossbeam-channel.workspace = true
tracing.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
capture = { path = "../capture" }
pipeline = { path = "../pipeline" }
encoder = { path = "../encoder" }
output = { path = "../output" }
audio = { path = "../audio" }
audio_encoder = { path = "../audio_encoder" }
windows.workspace = true

[features]
default = []
serde_config = ["dep:serde", "serde/derive"]

[dev-dependencies]
anyhow.workspace = true
ctrlc = "3"
tracing-subscriber = { workspace = true }

[target.'cfg(windows)'.dev-dependencies]
windows = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_System_Com",
] }
